fix:fix overscoll behaviour on mobile screen

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-html, body{
+ body{
  
   padding: 0;
   margin: 0;
@@ -6,7 +6,7 @@ html, body{
   background-color: rgba(0, 0, 0, 0.957);
   background-image: url('./images/texture2.png');
  overflow: hidden;
-  overscroll-behavior-y: contain ;
+  overscroll-behavior-y:none;
  
 }
 
